UI-3710 | User profile redesign. Fix bug text align.

--- a/platform-ui-skin/src/main/webapp/skin/less/social/portlets/uiUserPortlet/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/portlets/uiUserPortlet/Style.less
@@ -157,11 +157,12 @@ td.right-column-containerTDContainer {
 				}
 				.listContent {
 					> div {
-						margin: 5px 0;
+						margin: 0;
 						word-break: break-word;
 						&:first-child {
 							width: 80px;
 							display: inline-block;
+							vertical-align: top;
 						}
 					}
 					.ellipsis {
